Remove outline style from .container and change height encountered problem where created grids would overflow out of container outline. fixed by removing outline. changed height back to 960px

--- a/style.css
+++ b/style.css
@@ -4,12 +4,11 @@ body {
 
 .container {
     position: relative;
-    height: 1020px;
+    height: 960px;
     width: 960px;
     margin: auto;
     margin-top: 5rem;    
     padding: 0;
-    outline: .30rem solid black;
     border: none;
 
 }
